--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       <div class="logo">Hotel KHOYO</div>
       <nav>
         <ul class="nav-links">
-          <li><a href="home.html"  class="active">Home</a></li>
+          <li><a href="index.html"  class="active">Home</a></li>
           <li><a href="rooms.html">Rooms</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="about.html">About</a></li>
