--- a/rooms.html
+++ b/rooms.html
@@ -158,7 +158,7 @@
     <div class="logo">Hotel KHOYO</div>
     <nav>
       <ul class="nav-links">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="rooms.html" class="active">Rooms</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="about.html">About</a></li>
