--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
     <div class="logo">Hotel KHOYO</div>
     <nav>
       <ul class="nav-links">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="rooms.html">Rooms</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="about.html">About</a></li>
