--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       </div>
     </section>
 
-    < <!-- Rooms -->
+     <!-- Rooms -->
     <section class="rooms">
       <h2>Our Rooms</h2>
       <div class="room-cards">
